Bug 499914 - Fit-content plasma panel doesn't shrink back when Task Manager tasks disappear
Summary: Fit-content plasma panel doesn't shrink back when Task Manager tasks disappear
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.3.0
Platform: Other Linux
: VHI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 500027 500090 500100 500109 500156 500359 500660 500770 501069 501761 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-02-12 19:15 UTC by Jean-Baptiste Le Coz
Modified: 2025-03-19 22:47 UTC (History)
19 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.4
Sentry Crash Report:


Attachments
Look the panel down the screen (1.79 MB, video/webm)
2025-02-12 19:15 UTC, Jean-Baptiste Le Coz
Details
panel size not updating reproduced with window list instead of task manager (6.82 KB, image/png)
2025-02-13 16:24 UTC, cwo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Le Coz 2025-02-12 19:15:16 UTC
Created attachment 178223 [details]
Look the panel down the screen

SUMMARY
see attach video
I use a panel as a dock : it contain only a task manager, fit to content and some pin application.
When i launch an unpin app, the panel increase to fit the icon but when i close the app, the panel doesn't decrease until i hover it with the mouse cursor.

STEPS TO REPRODUCE
1.  configure a panel as a dock : it contain only a task manager, fit to content and some pin application.
2. launch an unpin app
3. Close the unpin app

OBSERVED RESULT
the panel doesn't decrease until i hover it with the mouse cursor.

EXPECTED RESULT
the panel decrease when the icon disappear.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Archlinux
KDE Plasma Version:6.3 
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.2

ADDITIONAL INFORMATION
Use to work on 6.2 wayland or xorg.
Comment 1 Timothy B 2025-02-13 00:45:44 UTC
Can confirm this happening on my end since updating Plasma to 6.3.0; I've never seen this happen in 6.2. Also, Frameworks 6.11 will be released on Valentine's Day, so we'll have to wait and see if it solves the problem.

Operating System: EndeavourOS 
KDE Plasma Version: 6.3.0
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.2
Graphics Platform: Wayland
Comment 2 Lars 2025-02-13 12:23:29 UTC
Also happens on Fedora 41:

Operating System: Fedora Linux 41
KDE Plasma Version: 6.3.0
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.2
Kernel Version: 6.12.11-200.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 PRO 7840U w/ Radeon 780M Graphics
Memory: 30.0 GiB of RAM
Graphics Processor: AMD Radeon 780M
Manufacturer: LENOVO
Product Name: 21K3CTO1WW
System Version: ThinkPad T14 Gen 4
Comment 3 cwo 2025-02-13 16:23:26 UTC
Can reproduce on master.

I think this is a general panel bug, rather than a task manager specific one. Smaller changes in widget width sometimes do not immediately get propagated to the panel.

Reproduction steps for a non-Task manager based version:

1) Add an empty panel, put Window list in, center-aligned and width fit-to-content. Make sure "Show application title" is enabled in window list
2) switch between windows with very long and somewhat shorter names.

It's not quite universal, but the panel can get stuck in both too-long and too-short states. For example, switching from System Monitor to Kmail Header Theme Editor,  the panel stays too short and only displays "KMail Header Them". Mouse over it, and it gets its proper size. If you switch back to System Monitor now, it stays longer and keeps extra whilespace around for a bit. It does not happen with all windows though, both Kate and Firefox seem to immediately trigger a resize if you switch to them (but not if you switch from them to System Monitor/KHTE). Sometimes it doesn't seem to happen depending on context I couldn't determine, but it's very easy to trigger.
Comment 4 cwo 2025-02-13 16:24:57 UTC
Created attachment 178294 [details]
panel size not updating reproduced with window list instead of task manager
Comment 5 cwo 2025-02-14 00:03:58 UTC
*** Bug 500027 has been marked as a duplicate of this bug. ***
Comment 6 cwo 2025-02-14 21:51:26 UTC
*** Bug 500090 has been marked as a duplicate of this bug. ***
Comment 7 Filip 2025-02-15 06:59:12 UTC
*** Bug 500100 has been marked as a duplicate of this bug. ***
Comment 8 cwo 2025-02-16 13:03:46 UTC
*** Bug 500109 has been marked as a duplicate of this bug. ***
Comment 9 cwo 2025-02-16 23:29:45 UTC
*** Bug 500156 has been marked as a duplicate of this bug. ***
Comment 10 Mar 2025-02-17 07:29:15 UTC
Also experiencing this since 6.3 update.

To reproduce:
1. Create a panel with only Task manager, and set it to fit content.
2. Open application tha is not pinned an close it

Software version:
Arch Linux
plasma-desktop 6.3.0-1
plasma-framework5 5.116.0-1

Aditiona info:
`journalctl -xe | grep plasmashell` outputs
```
feb 17 07:57:06 arch plasmashell[12117]: file:///usr/share/plasma/plasmoids/org.kde.plasma.taskmanager/contents/ui/Task.qml:79: TypeError: Cannot read property 'status' of null
feb 17 07:57:10 arch plasmashell[12117]: file:///usr/share/plasma/plasmoids/org.kde.plasma.taskmanager/contents/ui/Task.qml:79: TypeError: Cannot read property 'status' of null
```
Comment 11 Nate Graham 2025-02-18 23:38:35 UTC
*** Bug 500359 has been marked as a duplicate of this bug. ***
Comment 12 Elite 2025-02-19 16:01:25 UTC
Can be replicated on Nixos as well. In both wayland and x11.
https://youtu.be/trT1DOfTD1w

System:
  Kernel: 6.13.2-cachyos arch: x86_64 bits: 64 compiler: gcc v: 14.2.1
    clocksource: tsc avail: hpet,acpi_pm
    parameters: initrd=\EFI\nixos\vnzphbamwg03sapz3wd1ibmfp1h86dk3-initrd-linux-6.13.2-initrd.efi
    init=/nix/store/f5dxqnzmhv2vfcl6syf0hjy5skjkwyl2-nixos-system-nixos-25.05.20250216.d74a233/init
    psi=1 loglevel=4
  Desktop: KDE Plasma v: 6.3.0 tk: Qt v: N/A info: frameworks v: 6.10.0
    wm: kwin_wayland with: docker,krunner vt: 2 dm: SDDM
    Distro: NixOS 25.05 (Warbler)
Machine:
  Type: Desktop Mobo: ASUSTeK model: PRIME X570-PRO v: Rev X.0x
    serial: <superuser required> part-nu: SKU uuid: <superuser required>
    UEFI: American Megatrends v: 5013 date: 03/22/2024
CPU:
  Info: model: AMD Ryzen 7 3700X bits: 64 type: MT MCP arch: Zen 2 gen: 3
    level: v3 note: check built: 2020-22 process: TSMC n7 (7nm)
    family: 0x17 (23) model-id: 0x71 (113) stepping: 0 microcode: 0x8701034
  Topology: cpus: 1x cores: 8 tpc: 2 threads: 16 smt: enabled cache:
    L1: 512 KiB desc: d-8x32 KiB; i-8x32 KiB L2: 4 MiB desc: 8x512 KiB
    L3: 32 MiB desc: 2x16 MiB
  Speed (MHz): avg: 3953 high: 4357 min/max: 550/4426 boost: enabled
    scaling: driver: amd-pstate-epp governor: performance cores: 1: 4349 2: 4349
    3: 4350 4: 3935 5: 4350 6: 1757 7: 4357 8: 4350 9: 4349 10: 4347 11: 4350
    12: 4351 13: 4348 14: 4349 15: 3606 16: 1757 bogomips: 115196
  Flags: avx avx2 ht lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm
  Vulnerabilities: <filter>
Graphics:
  Message: Required tool lspci not installed. Check --recommends
  Display: wayland server: X.org v: 1.21.1.15 with: Xwayland v: 24.1.5
    compositor: kwin_wayland driver: N/A display-ID: 0 screens: 1
  Screen-1: 0 s-res: 3440x1440 s-size: <missing: xdpyinfo>
  Monitor-1: DP-1 res: 3440x1440 hz: 144 dpi: 109
    size: 800x335mm (31.5x13.19") diag: 867mm (34.15") modes: N/A
  API: Vulkan Message: No Vulkan data available.
  API: EGL Message: EGL data requires eglinfo. Check --recommends.
Comment 13 Bug Janitor Service 2025-02-19 19:20:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5233
Comment 14 Filip 2025-02-24 13:15:40 UTC
*** Bug 500660 has been marked as a duplicate of this bug. ***
Comment 15 Filip 2025-02-26 12:39:00 UTC
*** Bug 500770 has been marked as a duplicate of this bug. ***
Comment 16 cwo 2025-03-04 21:28:38 UTC
*** Bug 501069 has been marked as a duplicate of this bug. ***
Comment 17 Bug Janitor Service 2025-03-13 10:43:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5313
Comment 18 Niccolò Venerandi 2025-03-13 20:14:23 UTC
Git commit 14e84ee06899e63a0c64d50bd1ab329a16aad533 by Niccolò Venerandi.
Committed on 13/03/2025 at 20:12.
Pushed by niccolove into branch 'master'.

Check for queued positionAndResize requests at the end of the event cycle

Otherwise, calls might be queued during an update, and only
be acted upon when the successive update is called instead
of during the next frame.
Related: bug 499833

M  +4    -5    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/14e84ee06899e63a0c64d50bd1ab329a16aad533
Comment 19 Niccolò Venerandi 2025-03-13 20:14:30 UTC
Git commit 4151038ae6556d99f45297d3f722c60a55389073 by Niccolò Venerandi.
Committed on 13/03/2025 at 20:14.
Pushed by niccolove into branch 'Plasma/6.3'.

Check for queued positionAndResize requests at the end of the event cycle

Otherwise, calls might be queued during an update, and only
be acted upon when the successive update is called instead
of during the next frame.
Related: bug 499833


(cherry picked from commit 14e84ee06899e63a0c64d50bd1ab329a16aad533)

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>

M  +4    -5    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/4151038ae6556d99f45297d3f722c60a55389073
Comment 20 Nate Graham 2025-03-19 20:52:19 UTC
*** Bug 501761 has been marked as a duplicate of this bug. ***