Immediately resize panel after content changes size

Since there might be a significant amount of time passing
between calling update() and receiving an UpdateRequest,
queueing the resize after the content changes might leave the
panel with an incorrect size for too long.

BUG:499914